<resources>
    <string name="app_name">ケルカル</string>
    
    <string name="home">ホーム</string>
    <string name="timetable">時間割</string>
    <string name="assignment">課題</string>
    <string name="submitted_assignment">提出済課題</string>
    <string name="unsubmitted_assignment">未提出課題</string>
    <string name="logout">ログアウト</string>
    <string name="messege">お知らせ</string>
    <string name="setting">設定</string>
    
    <string name="assignment_to_date">明日までの未提出課題</string>
    <string name="timetable_to_day">今日の授業</string>

    <string name="monday">月</string>
    <string name="tuesday">火</string>
    <string name="wednesday">水</string>
    <string name="thursday">木</string>
    <string name="friday">金</string>

    <string name="first_period">1限</string>
    <string name="second_period">2限</string>
    <string name="third_period">3限</string>
    <string name="fourth_period">4限</string>
    <string name="fifth_period">5限</string>

    <string name="nav_open">Navigation Drawer Open</string>
    <string name="nav_close">Navigation Drawer Close</string>

    <string name="e_mail">メールアドレス</string>
    <string name="password">パスワード</string>
    <string name="alredy_have_account">すでにアカウントを持っている</string>
    <string name="create_account">アカウントを作る</string>
    <string name="register">アカウントを作成</string>
    <string name="login">ログイン</string>

    <string name="enter_university">確定</string>
    <string name="create_university">大学を追加</string>
    <string name="add_university_to_account">入学している大学を選択してください</string>
    <string name="select_term_2">2学期制</string>
    <string name="select_term_3">3学期制</string>
    <string name="select_term_4">4学期制</string>


    <string name="setting_data">データの引継ぎ</string>
    <string name="setting_uid">ユーザID</string>
    <string name="setting_your_university">登録大学</string>
    <string name="setting_destroy_user">データ消去</string>

    <string name="create">作成</string>

</resources>