<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/very_light_gray">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:colorPrimary"
        android:elevation="10dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppThem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


<!--    <com.google.android.gms.common.SignInButton-->
<!--        android:id="@+id/use_google_sign_in_button"-->
<!--        android:layout_width="250dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:layout_gravity="center_horizontal"-->

<!--        android:layout_marginBottom="44dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/EmaileditTextText"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/EmaileditTextText"-->
<!--        app:layout_constraintHorizontal_bias="0.494"-->
<!--        app:layout_constraintStart_toStartOf="@+id/EmaileditTextText" />-->

    <EditText
        android:id="@+id/EmaileditTextText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edittext_register_login"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:text="test0@gmail.com"
        app:layout_constraintBottom_toTopOf="@+id/PasswordeditTextText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/PasswordeditTextText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/edittext_register_login"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:text="123123"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/EmaileditTextText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/EmaileditTextText"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/create_account_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/register_login_button"
        android:text="@string/login"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/PasswordeditTextText"
        app:layout_constraintStart_toStartOf="@+id/PasswordeditTextText"
        app:layout_constraintTop_toBottomOf="@+id/PasswordeditTextText" />

</androidx.constraintlayout.widget.ConstraintLayout>