<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    android:background="@android:color/white">

    <View
        android:id="@+id/today_courses"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/main_info_view_background"
        app:layout_constraintEnd_toEndOf="@+id/main_assignment_info_veiw"
        app:layout_constraintStart_toStartOf="@+id/main_assignment_info_veiw"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/today_timetable_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/timetable_to_day"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/today_courses"
        app:layout_constraintTop_toTopOf="@+id/today_courses" />

    <View
        android:id="@+id/main_assignment_info_veiw"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/main_info_view_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today_courses" />

    <TextView
        android:id="@+id/main_assignment_info_textveiw"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/assignment_to_date"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/main_assignment_info_veiw"
        app:layout_constraintTop_toTopOf="@+id/main_assignment_info_veiw" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_assignment_info_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="@+id/main_assignment_info_veiw"
        app:layout_constraintEnd_toEndOf="@+id/main_assignment_info_veiw"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/main_assignment_info_veiw"
        app:layout_constraintTop_toBottomOf="@+id/main_assignment_info_textveiw"
        app:layout_constraintVertical_bias="0.0" >

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:tint="@android:color/black"
        app:backgroundTint="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/today_courses"
        app:layout_constraintEnd_toEndOf="@+id/today_courses"
        app:layout_constraintStart_toStartOf="@+id/today_courses"
        app:layout_constraintTop_toBottomOf="@+id/today_timetable_textview">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/timetable_1_textview"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:layout_marginTop="4dp"
                android:text="@string/first_period" />

            <include
                android:id="@+id/today_first_period"
                layout="@layout/item_home_activity_taimetable"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/timetable_2_textview"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:layout_marginTop="4dp"
                android:text="@string/second_period" />

            <include
                android:id="@+id/today_second_period"
                layout="@layout/item_home_activity_taimetable"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/timetable_3_textview"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:layout_marginTop="4dp"
                android:text="@string/third_period" />

            <include
                android:id="@+id/today_third_period"
                layout="@layout/item_home_activity_taimetable"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/timetable_4_textview"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:layout_marginTop="4dp"
                android:text="@string/fourth_period" />

            <include
                android:id="@+id/today_fourth_period"
                layout="@layout/item_home_activity_taimetable"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/timetable_5_textview"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:layout_marginTop="4dp"
                android:text="@string/fifth_period" />

            <include
                android:id="@+id/today_fifth_period"
                layout="@layout/item_home_activity_taimetable"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>