<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:gravity="center">

            <TextView
                android:id="@+id/semester_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2020春学期"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/semester_select_button"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/arrow_down_float" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:gravity="center">

            <TextView
                android:id="@+id/textView32"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="　 " />

            <TextView
                android:id="@+id/timetable_title_monday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/monday"
                android:textSize="@dimen/timetable_textsize" />

            <TextView
                android:id="@+id/timetable_title_tuesday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tuesday"
                android:textSize="@dimen/timetable_textsize" />

            <TextView
                android:id="@+id/timetable_title_wednesday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wednesday"
                android:textSize="@dimen/timetable_textsize" />

            <TextView
                android:id="@+id/timetable_title_thursday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/thursday"
                android:textSize="@dimen/timetable_textsize" />

            <TextView
                android:id="@+id/timetable_title_friday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/friday"
                android:textSize="@dimen/timetable_textsize" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/textView34"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:gravity="center"
                android:text="@string/first_period"
                android:textSize="@dimen/timetable_textsize" />

            <include
                android:id="@+id/timetable_include_mon1"
                layout="@layout/item_timetable"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <include
                android:id="@+id/timetable_include_tue1"
                layout="@layout/item_timetable"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <include
                android:id="@+id/timetable_include_wed1"
                layout="@layout/item_timetable"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <include
                android:id="@+id/timetable_include_thu1"
                layout="@layout/item_timetable"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <include
                android:id="@+id/timetable_include_fri1"
                layout="@layout/item_timetable"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/textView35"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:gravity="center"
                android:text="@string/second_period"
                android:textSize="@dimen/timetable_textsize" />

            <include
                android:id="@+id/timetable_include_mon2"
                layout="@layout/item_timetable"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <include
                android:id="@+id/timetable_include_tue2"
                layout="@layout/item_timetable"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <include
                android:id="@+id/timetable_include_wed2"
                layout="@layout/item_timetable"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <include
                android:id="@+id/timetable_include_thu2"
                layout="@layout/item_timetable"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <include
                android:id="@+id/timetable_include_fri2"
                layout="@layout/item_timetable"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/textView36"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:gravity="center"
                android:text="@string/third_period"
                android:textSize="@dimen/timetable_textsize" />

            <include
                android:id="@+id/timetable_include_mon3"
                layout="@layout/item_timetable"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <include
                android:id="@+id/timetable_include_tue3"
                layout="@layout/item_timetable"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <include
                android:id="@+id/timetable_include_wed3"
                layout="@layout/item_timetable"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <include
                android:id="@+id/timetable_include_thu3"
                layout="@layout/item_timetable"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <include
                android:id="@+id/timetable_include_fri3"
                layout="@layout/item_timetable"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/textView37"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:gravity="center"
                android:text="@string/fourth_period"
                android:textSize="@dimen/timetable_textsize" />

            <include
                android:id="@+id/timetable_include_mon4"
                layout="@layout/item_timetable"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <include
                android:id="@+id/timetable_include_tue4"
                layout="@layout/item_timetable"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <include
                android:id="@+id/timetable_include_wed4"
                layout="@layout/item_timetable"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <include
                android:id="@+id/timetable_include_thu4"
                layout="@layout/item_timetable"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <include
                android:id="@+id/timetable_include_fri4"
                layout="@layout/item_timetable"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/textView38"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:gravity="center"
                android:text="@string/fifth_period"
                android:textSize="@dimen/timetable_textsize" />

            <include
                android:id="@+id/timetable_include_mon5"
                layout="@layout/item_timetable"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <include
                android:id="@+id/timetable_include_tue5"
                layout="@layout/item_timetable"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <include
                android:id="@+id/timetable_include_wed5"
                layout="@layout/item_timetable"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <include
                android:id="@+id/timetable_include_thu5"
                layout="@layout/item_timetable"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <include
                android:id="@+id/timetable_include_fri5"
                layout="@layout/item_timetable"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>