<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/white"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:elevation="4dp"
        android:text="ユーザ情報"
        android:textSize="@dimen/setting_title_textsize"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/setting_uid_title"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:elevation="4dp"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:paddingLeft="8sp"
        android:paddingRight="8sp"
        android:text="@string/setting_uid"
        android:textSize="@dimen/setting_activity_textsize"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/setting_university_title"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:elevation="4dp"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:paddingLeft="8sp"
        android:paddingRight="8sp"
        android:text="@string/setting_your_university"
        android:textSize="@dimen/setting_activity_textsize"
        app:layout_constraintStart_toStartOf="@+id/setting_uid_title"
        app:layout_constraintTop_toBottomOf="@+id/setting_uid_title" />

    <TextView
        android:id="@+id/setting_uid_textview"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:elevation="4dp"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:paddingLeft="8sp"
        android:paddingRight="8sp"
        android:text="ID読み込み中"
        android:textSize="@dimen/setting_activity_textsize"
        app:layout_constraintBottom_toBottomOf="@+id/setting_uid_title"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/setting_uid_title"
        app:layout_constraintTop_toTopOf="@+id/setting_uid_title" />

    <TextView
        android:id="@+id/setting_university_textview"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:elevation="4dp"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:paddingLeft="8sp"
        android:paddingRight="8sp"
        android:text="大学読み込み中"
        android:textSize="@dimen/setting_activity_textsize"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/setting_university_title"
        app:layout_constraintTop_toTopOf="@+id/setting_university_title" />

    <Button
        android:id="@+id/setting_data_transfer_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:elevation="4dp"
        android:background="@android:color/white"
        android:text="@string/setting_data"
        android:textColor="@color/common_google_signin_btn_text_light_default"
        android:textSize="@dimen/setting_activity_textsize"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <!--    <Button-->
    <!--        android:id="@+id/setting_destroy_user"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:layout_marginBottom="24dp"-->
    <!--        android:background="@android:color/holo_red_dark"-->
    <!--        android:text="@string/setting_destroy_user"-->
    <!--        android:textSize="@dimen/setting_activity_textsize"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/setting_data_transfer_button" />-->

</androidx.constraintlayout.widget.ConstraintLayout>